Fix banner on small screens

--- a/src/css/components/slider/slider.css
+++ b/src/css/components/slider/slider.css
@@ -21,13 +21,23 @@
 .Slider-link:focus,
 .Slider-link:hover {
     color: inherit;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     overflow: hidden; /* Done to prevent a scaled blurred image (with .u-imageBlur) from overflowing */
     text-decoration: none;
 }
 
 .Slider-image {
     height: auto;
+    height: 100%;
+    width: 100%;
+}
+
+/* postcss-bem-linter: ignore */
+.Slider-image > img {
+    height: 100%;
+    object-fit: cover;
     width: 100%;
 }
 
